# stick

./: .gitignore  pyproject.toml  setup.py
stick/: __init__.py  app.py  onoffdevice.py  stick.py  tellstick.py
stick/schemas/: configuration.stick.schema.json
tests/: test_stick.py
