[tool.poetry]
name = "stick"
version = "0.0.1"
description = "The Stick of Truth"
authors = ["Kristoffer Nilsson-Chavez <kristoffer@novafaen.se>"]
homepage = "http://smrt.novafaen.se/"

[tool.poetry.dependencies]
python = "^3.8"
smrt = { git = "https://github.com/novafaen/smrt.git", branch = "master" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
pycodestyle = "^2.5.0"
pydocstyle = "^5.0.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
